package adapterPattern.robotBuilder.enums;

//Parts we have

public enum PartEnum {

	Backrest,
	Leg,
	Seat,
	Handle,
	TableTop
}